--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie-magic-may-2025",
+  "name": "movie-magic",
   "version": "1.0.0",
   "description": "SoftUni JS Back-End Course Workshop",
   "main": "index.js",
@@ -7,21 +7,11 @@
     "start": "node src/index.js",
     "dev": "node --watch src/index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ivailopapazov/movie-magic-may-2025.git"
-  },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
   "type": "module",
-  "bugs": {
-    "url": "https://github.com/ivailopapazov/movie-magic-may-2025/issues"
-  },
-  "homepage": "https://github.com/ivailopapazov/movie-magic-may-2025#readme",
+  "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "express-handlebars": "^8.0.3",
-    "uuid": "^11.1.0"
+    "express-handlebars": "^8.0.3"
   }
 }
