--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie-magic",
+  "name": "movie-magic-may-2025",
   "version": "1.0.0",
   "description": "SoftUni JS Back-End Course Workshop",
   "main": "index.js",
@@ -7,11 +7,21 @@
     "start": "node src/index.js",
     "dev": "node --watch src/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ivailopapazov/movie-magic-may-2025.git"
+  },
+  "keywords": [],
   "author": "",
-  "type": "module",
   "license": "ISC",
+  "type": "module",
+  "bugs": {
+    "url": "https://github.com/ivailopapazov/movie-magic-may-2025/issues"
+  },
+  "homepage": "https://github.com/ivailopapazov/movie-magic-may-2025#readme",
   "dependencies": {
     "express": "^5.1.0",
-    "express-handlebars": "^8.0.3"
+    "express-handlebars": "^8.0.3",
+    "uuid": "^11.1.0"
   }
 }
