add cookie parser to project

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "homepage": "https://github.com/ivailopapazov/movie-magic-may-2025#readme",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "uuid": "^11.1.0"
   }
